2003-01-21  Dave Jones <davej@codemonkey.org.uk>

	* libop/op_events.c: Add x86-64 specific events.

2003-01-21  Philippe Elie  <phil.el@wanadoo.fr>

	* daemon/opd_kernel.c: use sscanf to parse /proc/modules

2003-01-20  Philippe Elie  <phil.el@wanadoo.fr>

	* daemon/opd_kernel.c: more robust /proc/modules parsing.

2003-01-20  Philippe Elie  <phil.el@wanadoo.fr>

	* daemon/opd_kernel.c: 2.5 modules support, for now I keep
	  the code for /proc/ksyms parsing in daemon. Let's it living a few
	  weeks please.

2003-01-18  Falk Hueffner  <falk@debian.org>

	I added to the original patch all %L to %ll, Phil

	* daemon/opd_image.c:
	* daemon/opd_kernel.c:
	* libutil/op_types.h: 64 bits printf/scanf safety.

2003-01-18  Falk Hueffner  <falk@debian.org>

	* libop/op_cpu_type.h:
	* libop/op_cpu_type.c: add Alpha CPU families.
	* libop/op_events.h: make op_event.cpu_mask u32, since we now have
	  more than 16 CPU types
	* libop/op_hw_config.h: bump OP_MAX_COUNTERS to 20 for Alpha
	* libop/op_events.c: add Alpha events
	* daemon/opd_cookie.h: add dcookie syscall number for Alpha
	* utils/op_help.c (main): add help string for Alpha

2003-01-18  John Levon  <levon@movementarian.org>

	* module/Makefile.in:
	* module/x86/Makefile.in:
	* module/ia64/Makefile.in: kernel headers are too fubar
	  for -Werror. So I'm taking my ball home.

2003-01-17  John Levon  <levon@movementarian.org>

	* HACKING:
	* doc/CodingStyle: add

2003-01-17  John Levon  <levon@movementarian.org>

	* TODO: some updates

2003-01-15  Philippe Elie  <phil.el@wanadoo.fr>

	* module/x86/op_model_p4.c: pmc_setup_one_p4_counter() show clearly
	  than event == 0 is an error

2003-01-15  John Levon  <levon@movementarian.org>

	* utils/opcontrol: prefer oprofiled/op_help binaries in the same
	  dir as opcontrol

2003-01-12  Philippe Elie  <phil.el@wanadoo.fr>

	* libop/op_events.c: rename OP_P4_HT2 to OP_P4_ALL

2003-01-12  Philippe Elie  <phil.el@wanadoo.fr>
