@@ -1,5 +1,9 @@
 2003-01-21  Dave Jones <davej@codemonkey.org.uk>
 
+	* libop/op_events.c: Add unit mask for Hypertransport events.
+
+2003-01-21  Dave Jones <davej@codemonkey.org.uk>
+
 	* libop/op_events.c: Add x86-64 specific events.
 
 2003-01-21  Philippe Elie  <phil.el@wanadoo.fr>
